<resources>
    <string name="app_name">MyFirstTrip</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_import_title">Import</string>
    <string name="nav_tools_title">Tools</string>
    <string name="nav_communicate_title">Communicate</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_send_title">Send</string>
    <string name="nav_trips_title">Trips</string>
    <string name="profile_image_content_description">Profile image content description</string>
    <string name="profile_email">Profile email</string>
    <string name="profile_name">Profile name</string>
    <string name="trip_title">Trip quantity</string>
    <string name="trip_action1">Action 1</string>
    <string name="trip_action2">Action 2</string>
    <string name="trip_subtitle">Trip motivation</string>
    <string name="people">People</string>
    <string name="person_title">Person name</string>
    <string name="person_subtitle">Person surname</string>
    <string name="nav_people_title">People</string>
    <string name="trips">Trips</string>
    <string name="add_trip">Add trip</string>
    <string name="add_person">Add person</string>
    <string name="edit_trip">Edit trip</string>
    <string name="edit_person">Edit person</string>
    <string name="confirm_person">Confirm person</string>
    <string name="confirm_trip">Confirm trip</string>
    <string name="undo">Undo</string>
    <string name="choose_trip">Choose trip</string>
    <string name="choose_person">Choose person</string>
    <string name="clear_trip">Clear trip</string>
    <string name="clear_person">Clear person</string>
    <string name="add_cost">Add cost</string>
    <string name="confirm_cost">Confirm cost</string>
    <string name="edit_cost">Edit cost</string>
    <string name="clear_cost">Clear cost</string>
    <string name="choose_cost">Choose cost</string>
    <string name="nav_costs_title">Costs</string>
    <string name="cost_quantity">1</string>
    <string name="cost_motivation">Cost motivation</string>
    <string name="costs">Costs</string>
    <string name="trip_total_cost">0</string>
    <string name="person_total_debt">0</string>
</resources>
