<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear_trip"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/clear_trip"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/confirm_trip"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/confirm_trip"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/choose_person"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/choose_person"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/choose_cost"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/choose_cost"
        app:showAsAction="ifRoom" />
</menu>