<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    card_view:cardUseCompatPadding="true">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/colorAccent" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/trip_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_title"
                    android:textSize="@dimen/trip_title" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/trip_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_subtitle"
                    android:textSize="@dimen/trip_subtitle" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/trip_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_total_cost"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/trip_subtitle" />
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/trip_action1" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/trip_action2" />
            </android.support.v7.widget.ButtonBarLayout>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/selected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/holo_green_light"
        android:visibility="gone" />

</android.support.v7.widget.CardView>
