<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    card_view:cardUseCompatPadding="true">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.ContentFrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    card_view:srcCompat="@drawable/ic_account_circle_black_24dp" />
            </android.support.v7.widget.ContentFrameLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:paddingTop="16dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_title"
                    android:textSize="@dimen/person_title" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/person_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_subtitle"
                    android:textSize="@dimen/person_subtitle" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/person_total_debt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/person_total_debt"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/person_subtitle" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/selected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/holo_green_light"
        android:visibility="gone" />

</android.support.v7.widget.CardView>
